# pdf2ppt

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  packages.txt  pyproject.toml  requirements-colab.txt  requirements.txt  upload_to_hf.py
.github/workflows/: release-docker.yml  test.yml
notebooks/: pdf2ppt_colab.ipynb
src/pdf2ppt/: __init__.py  api.py  cli.py  pipeline.py
src/pdf2ppt/image/: __init__.py  extractor.py
src/pdf2ppt/model/: elements.py  grouping.py  normalize.py
src/pdf2ppt/pdf/: extractor.py  ocr.py
src/pdf2ppt/pptx/: writer.py
tests/: test_api.py  test_units.py
