[project]
name = "pdf2ppt"
version = "1.1.0"
description = "CLI to convert PDF (text/images) to editable PPTX with OCR support"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "PyMuPDF>=1.24.0",
  "python-pptx>=0.6.23",
  "typer>=0.12.0",
  "pytesseract>=0.3.10",
  "opencv-python>=4.9.0.80",
  "lxml>=5.0.0",
  "numpy>=2.0.0",
  "Pillow>=12.0.0",
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "simple-lama-inpainting>=0.1.0",
  "paddlepaddle==3.2.0",
  "paddleocr==3.3.3",
  "diffusers>=0.32.0",
  "torch>=2.3.0",
  "transformers>=4.44.0",
  "safetensors>=0.4.0",
  "openai>=1.0.0",
]

[project.scripts]
pdf2ppt = "pdf2ppt.cli:entrypoint"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
